k8s/coalesce/istio0to60/webserver-demo/pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: mywebserver
  name: mywebserver
spec:
  containers:
    - name: mywebserver
      image: nginx
