k8s/coalesce/istio0to60/webserver-demo/istio-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-istio-ingress
  namespace: default
spec:
  podSelector: {} # This applies to all pods in the namespace
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: istio-system
        - podSelector:
            matchLabels:
              app: istio-ingressgateway
  policyTypes:
    - Ingress
